--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -1,4 +1,8 @@
 .features {
     background-color: lightgreen;
     grid-column: center-start/center-end;
+
+    display: grid;
+    grid-column: repeat(3, 1fr);
+    grid-gap: 6rem;
 }
