--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -1,8 +1,29 @@
 .features {
-    background-color: lightgreen;
     grid-column: center-start/center-end;
-
+    margin: 15rem 0;
     display: grid;
-    grid-column: repeat(3, 1fr);
+    // grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     grid-gap: 6rem;
+}
+
+.feature {
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    grid-template-rows: min-content 1fr;
+    align-items: start;
+
+    &__icon {
+        fill: $color-primary;
+        height: 4.5rem;
+        width: 4.5rem;
+        margin-right: 2rem;
+        transform: translateY(-1rem);
+    }
+
+    &__text {
+        font-size: 1.7rem;
+        grid-column: 2/-1;
+    }
+
 }
