--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,53 @@ body {
   font-family: Josefin;
   font-weight: 400; }
 
+.heading-2 {
+  font-size: 4rem;
+  font-style: italic;
+  line-height: 1; }
+  .heading-2--light {
+    color: #f9f7f6; }
+  .heading-2--dark {
+    color: #54483a; }
+
+.heading-3 {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  color: #c69963; }
+
 .heading-4 {
   font-size: 1.9rem; }
   .heading-4--light {
     color: #f9f7f6; }
   .heading-4--dark {
     color: #54483a; }
+
+.btn {
+  font-size: 1.6rem;
+  border-radius: 0;
+  background-color: #c69963;
+  text-transform: uppercase;
+  color: #fff;
+  font-family: "Josefin Sans", sans-serif;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+  border: none;
+  padding: 2rem 3rem;
+  transition: all .2s; }
+  .btn:hover {
+    background-color: #b28451; }
+
+/*UTILITIES*/
+.mb-sm {
+  margin-bottom: 2rem; }
+
+.mb-md {
+  margin-bottom: 3rem; }
+
+.mb-lg {
+  margin-bottom: 4rem; }
+
+.mb-hg {
+  margin-bottom: 8rem; }
 
 .sidebar {
   background-color: #c69963;
@@ -71,8 +112,17 @@ body {
   grid-column: full-start/col-end 4; }
 
 .story_content {
-  background-color: limegreen;
-  grid-column: col-start 5/full-end; }
+  background-color: #f9f7f6;
+  grid-column: col-start 5/full-end;
+  padding: 6rem 12rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start; }
+
+.story__text {
+  font-size: 1.6rem;
+  color: #54483a;
+  margin-bottom: 8rem; }
 
 .home {
   background-color: lightskyblue;
