--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -9,10 +9,25 @@
 
 .heading-2 {
     @extend %heading;
+    font-size: 4rem;
+    font-style: italic;
+    line-height: 1;
+
+    &--light {
+        color: $color-grey-light-1;
+    }
+
+    &--dark {
+        color: $color-grey-dark-1;
+    }
 }
 
 .heading-3 {
     @extend %heading;
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    color: $color-primary;
+
 }
 
 .heading-4 {
@@ -26,4 +41,40 @@
     &--dark {
         color: $color-grey-dark-1;
     }
+}
+
+.btn {
+    font-size: 1.6rem;
+    border-radius: 0;
+    background-color: $color-primary;
+    text-transform: uppercase;
+    color: #fff;
+    font-family: $font-display;
+    box-shadow: 0 1rem 2rem rgba(#000, .4);
+    border: none;
+    padding: 2rem 3rem;
+    transition: all .2s;
+
+    &:hover {
+        background-color: $color-primary-dark;
+    }
+
+
+}
+
+/*UTILITIES*/
+.mb-sm {
+    margin-bottom: 2rem;
+}
+
+.mb-md {
+    margin-bottom: 3rem;
+}
+
+.mb-lg {
+    margin-bottom: 4rem;
+}
+
+.mb-hg {
+    margin-bottom: 8rem;
 }
