--- a/css/style.css
+++ b/css/style.css
@@ -108,16 +108,30 @@ body {
     grid-column: 2/-1; }
 
 .story_pictures {
-  background-color: lightyellow;
-  grid-column: full-start/col-end 4; }
+  background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(../img/back.jpg);
+  grid-column: full-start/col-end 4;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  align-items: center; }
+
+.story_img--1 {
+  width: 100%;
+  grid-column: 2/6;
+  grid-row: 2/6;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
+
+.story_img--2 {
+  width: 115%;
+  grid-column: 4/-1;
+  grid-row: 4/7;
+  z-index: 10;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
 
 .story_content {
   background-color: #f9f7f6;
   grid-column: col-start 5/full-end;
-  padding: 6rem 12rem;
-  display: flex;
-  flex-direction: column;
-  align-items: start; }
+  padding: 6rem 12rem; }
 
 .story__text {
   font-size: 1.6rem;
