--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -1,19 +1,39 @@
 .story {
 
     &_pictures {
-        background-color: lightyellow;
+        background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../img/back.jpg);
         grid-column: full-start/col-end 4;
-
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        align-items: center;
     }
+
+    &_img--1 {
+        width: 100%;
+        grid-column: 2/6;
+        grid-row: 2/6;
+        box-shadow: 0 2rem 5rem rgba(#000, .1);
+    }
+
+    &_img--2 {
+        width: 115%;
+        grid-column: 4/-1;
+        grid-row: 4/7;
+        z-index: 10;
+        box-shadow: 0 2rem 5rem rgba(#000, .1);
+    }
+
 
     &_content {
         background-color: $color-grey-light-1;
         grid-column: col-start 5/full-end;
         padding: 6rem 12rem;
+        
 
-        display: flex;
-        flex-direction: column;
-        align-items: start;
+        // display: grid;
+        // align-items: center;
+        // justify-items: center;
 
     }
 
