--- a/css/style.css
+++ b/css/style.css
@@ -138,9 +138,11 @@ body {
   color: #54483a;
   margin-bottom: 8rem; }
 
-.home {
+.homes {
   background-color: lightskyblue;
-  grid-column: center-start/center-end; }
+  grid-column: center-start/center-end;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr)); }
 
 .gallery {
   background-color: lightsalmon;
