--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -1,4 +1,6 @@
-.home {
+.homes {
     background-color: lightskyblue;
     grid-column: center-start/center-end;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
 }
