--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -1,6 +1,72 @@
 .homes {
-    background-color: lightskyblue;
     grid-column: center-start/center-end;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-gap: 10rem;
+    margin: 15rem 6rem
+}
+
+.home {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 3.5rem;
+    justify-items: center;
+    background-color: $color-grey-light-1;
+
+    &__img {
+        width: 100%;
+        grid-column: 1/-1;
+        grid-row: 1/2;
+    }
+
+    &__name {
+        font-size: 1.6rem;
+        font-weight: 400;
+        background-color: $color-secondary;
+        color: $color-grey-light-1;
+        padding: 1.25rem;
+        text-align: center;
+
+        grid-column: 1/-1;
+        grid-row: 1/2;
+        transform: translateY(50%);
+        justify-self: center;
+        align-self: end;
+    }
+
+    &__like {
+        fill: $color-primary;
+        width: 2.5rem;
+        height: 2.5rem;
+        grid-column: 2/3;
+        grid-row: 1/2;
+        justify-self: end;
+        margin: 1rem 1.5rem;
+    }
+
+    &__location,
+    &__rooms {
+        margin-top: 2rem;
+    }
+
+    &__location,
+    &__price,
+    &__area,
+    &__rooms {
+        display: flex;
+        font-size: 1.2rem;
+
+        svg {
+            fill: $color-primary;
+            width: 2rem;
+            height: 2rem;
+            margin-right: 1rem;
+        }
+
+    }
+
+    &__btn {
+        grid-column: 1/-1;
+        justify-self: stretch;
+    }
 }
