--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -62,6 +62,10 @@
 
 }
 
+.cta{
+    
+}
+
 /*UTILITIES*/
 .mb-sm {
     margin-bottom: 2rem;
@@ -78,3 +82,4 @@
 .mb-hg {
     margin-bottom: 8rem;
 }
+
