--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,5 +1,68 @@
 .footer {
-    background-color: lightcoral;
+    background-color: $color-secondary;
     grid-column: full-start/full-end;
+    padding: 8rem;
+    font-size: 1.4rem;
 
+}
+
+.nav {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-gap: 2rem;
+
+    &__link {
+
+        &:visited,
+        &:link {
+
+            font-family: $font-display;
+            font-weight: 300;
+            color: $color-grey-light-1;
+            font-size: 1.4rem;
+            text-decoration: none;
+            text-transform: uppercase;
+            transition: all .2s;
+            padding: 1.5rem;
+            display: block;
+            text-align: center;
+        }
+
+        &:hover,
+        &:active {
+            background-color: rgba(#fff, .5);
+            transform: translateY(-3px);
+        }
+
+    }
+
+}
+
+.copyright {
+    color: $color-grey-light-2;
+    margin: 6rem auto 0 auto;
+    text-align: center;
+    width: 70%;
+
+    &__link {
+
+        &:link,
+        &:visited {
+            color: currentColor;
+            font-size: 1.6rem;
+            text-transform: uppercase;
+            text-decoration: none;
+            transition: all .2s;
+            padding: 1rem;
+            display: inline-block;
+        }
+
+        &:hover,
+        &:active {
+            background-color: rgba(#fff, .2);
+            transform: translateY(-3px);
+
+        }
+    }
 }
