--- a/css/style.css
+++ b/css/style.css
@@ -245,5 +245,44 @@ body {
     display: block; }
 
 .footer {
-  background-color: lightcoral;
-  grid-column: full-start/full-end; }
+  background-color: #101d2c;
+  grid-column: full-start/full-end;
+  padding: 8rem;
+  font-size: 1.4rem; }
+
+.nav {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-gap: 2rem; }
+  .nav__link:visited, .nav__link:link {
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 300;
+    color: #f9f7f6;
+    font-size: 1.4rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: all .2s;
+    padding: 1.5rem;
+    display: block;
+    text-align: center; }
+  .nav__link:hover, .nav__link:active {
+    background-color: rgba(255, 255, 255, 0.5);
+    transform: translateY(-3px); }
+
+.copyright {
+  color: #aaa;
+  margin: 6rem auto 0 auto;
+  text-align: center;
+  width: 70%; }
+  .copyright__link:link, .copyright__link:visited {
+    color: currentColor;
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    transition: all .2s;
+    padding: 1rem;
+    display: inline-block; }
+  .copyright__link:hover, .copyright__link:active {
+    background-color: rgba(255, 255, 255, 0.2);
+    transform: translateY(-3px); }
