--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@ body {
   font-family: Josefin;
   font-weight: 400; }
 
+.heading-1 {
+  font-family: Josefin, sans-serif;
+  font-size: 4.5rem;
+  color: #f9f7f6;
+  line-height: 1; }
+
 .heading-2 {
   font-size: 4rem;
   font-style: italic;
@@ -46,7 +52,7 @@ body {
     color: #54483a; }
 
 .btn {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   border-radius: 0;
   background-color: #c69963;
   text-transform: uppercase;
@@ -54,7 +60,7 @@ body {
   font-family: "Josefin Sans", sans-serif;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
   border: none;
-  padding: 2rem 3rem;
+  padding: 1.5rem;
   transition: all .2s; }
   .btn:hover {
     background-color: #b28451; }
@@ -75,15 +81,91 @@ body {
 .sidebar {
   background-color: #c69963;
   grid-column: sidebar-start/sidebar-end;
-  grid-row: 1/-1; }
+  grid-row: 1/-1;
+  display: flex;
+  justify-content: center; }
+
+.nav-btn {
+  border: none;
+  border-radius: 0;
+  background-color: #fff;
+  height: 2px;
+  width: 4.5rem;
+  margin-top: 4.5rem; }
+  .nav-btn::before, .nav-btn::after {
+    border: none;
+    border-radius: 0;
+    background-color: #fff;
+    height: 2px;
+    width: 4.5rem;
+    content: "";
+    display: block; }
+  .nav-btn::before {
+    transform: translateY(-1.3rem); }
+  .nav-btn::after {
+    transform: translateY(1.5rem); }
 
 .header {
-  background-color: pink;
-  grid-column: full-start/col-end 6; }
+  grid-column: full-start/col-end 6;
+  background-image: linear-gradient(rgba(16, 29, 44, 0.93), rgba(16, 29, 44, 0.93)), url(../img/hero.jpeg);
+  background-position: center;
+  background-size: cover;
+  padding: 8rem;
+  padding-top: 4rem;
+  display: grid;
+  grid-template-rows: 1fr min-content 6rem 1fr;
+  grid-template-columns: max-content;
+  grid-row-gap: 1.5rem;
+  justify-content: center; }
+  .header__logo {
+    height: 3rem;
+    justify-self: center; }
+  .header__seenon-text {
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    align-items: center;
+    grid-column-gap: 1.5rem;
+    font-size: 1.6rem;
+    color: #aaa; }
+    .header__seenon-text::before, .header__seenon-text::after {
+      content: "";
+      background-color: currentColor;
+      height: 1px;
+      display: block; }
+  .header__btn {
+    justify-self: start;
+    align-self: start; }
+  .header__seenon-logos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 3rem;
+    justify-items: center; }
+    .header__seenon-logos img {
+      height: 2.5rem;
+      filter: brightness(70%); }
 
 .realtors {
-  background-color: lightsteelblue;
-  grid-column: col-start 7/full-end; }
+  background-color: #101d2c;
+  grid-column: col-start 7/full-end;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+  grid-row-gap: 2rem; }
+  .realtors__list {
+    display: grid;
+    grid-template-columns: min-content max-content;
+    grid-column-gap: 2rem;
+    grid-row-gap: 5vh;
+    align-items: center; }
+  .realtors__img {
+    width: 7rem;
+    border-radius: 50%;
+    display: block; }
+  .realtors__sold {
+    text-transform: uppercase;
+    color: #aaa;
+    margin-top: -3px; }
 
 .features {
   grid-column: center-start/center-end;
@@ -130,13 +212,16 @@ body {
 
 .story_content {
   background-color: #f9f7f6;
-  grid-column: col-start 5/full-end;
-  padding: 6rem 12rem; }
+  grid-column: col-start 5/-1;
+  padding: 6rem 10vw;
+  display: grid;
+  align-content: center;
+  justify-items: start; }
 
 .story__text {
   font-size: 1.6rem;
   color: #54483a;
-  margin-bottom: 8rem; }
+  margin-bottom: 6rem; }
 
 .homes {
   grid-column: center-start/center-end;
