--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,54 @@
 .header {
-    background-color: pink;
+    // background-color: pink;
     grid-column: full-start/col-end 6;
+    background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93)), url(../img/hero.jpeg);
+    background-position: center;
+    background-size: cover;
+    padding: 8rem;
+    padding-top: 4rem;
 
+    display: grid;
+    grid-template-rows: 1fr min-content 6rem 1fr;
+    grid-template-columns: max-content;
+    grid-row-gap: 1.5rem;
+    justify-content: center;
+
+    &__logo {
+        height: 3rem;
+        justify-self: center;
+    }
+
+    &__seenon-text {
+        display: grid;
+        grid-template-columns: 1fr max-content 1fr;
+        align-items: center;
+        grid-column-gap: 1.5rem;
+        font-size: 1.6rem;
+        color: $color-grey-light-2;
+
+        &::before,
+        &::after {
+            content: "";
+            background-color: currentColor;
+            height: 1px;
+            display: block;
+        }
+    }
+
+    &__btn {
+        justify-self: start;
+        align-self: start;
+    }
+
+    &__seenon-logos {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 3rem;
+        justify-items: center;
+
+        img {
+            height: 2.5rem;
+            filter: brightness(70%);
+        }
+    }
 }
