--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -5,6 +5,10 @@
 
 .heading-1 {
     @extend %heading;
+    font-family: Josefin, sans-serif;
+    font-size: 4.5rem;
+    color: $color-grey-light-1;
+    line-height: 1;
 }
 
 .heading-2 {
@@ -44,7 +48,7 @@
 }
 
 .btn {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     border-radius: 0;
     background-color: $color-primary;
     text-transform: uppercase;
@@ -52,7 +56,7 @@
     font-family: $font-display;
     box-shadow: 0 1rem 2rem rgba(#000, .4);
     border: none;
-    padding: 2rem 3rem;
+    padding: 1.5rem;
     transition: all .2s;
 
     &:hover {
@@ -62,9 +66,6 @@
 
 }
 
-.cta{
-    
-}
 
 /*UTILITIES*/
 .mb-sm {
@@ -82,4 +83,3 @@
 .mb-hg {
     margin-bottom: 8rem;
 }
-
