--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -2,12 +2,18 @@
     // background-color: lightsteelblue;
     background-color: $color-secondary;
     grid-column: col-start 7/full-end;
-
+    padding: 3rem;
     display: grid;
     align-content: center;
     justify-content: center;
     justify-items: center;
     grid-row-gap: 2rem;
+
+    @media only screen and (max-width:$bp-md) {
+        grid-column: 1/-1;
+    }
+
+
 
     &__list {
         display: grid;
@@ -15,6 +21,14 @@
         grid-column-gap: 2rem;
         grid-row-gap: 5vh;
         align-items: center;
+
+        @media only screen and (max-width:$bp-md) {
+            grid-template-columns: repeat(3, min-content max-content);
+        }
+
+        @media only screen and (max-width:$bp-md) {
+            grid-template-columns: min-content max-content;
+        }
     }
 
     &__img {
@@ -29,5 +43,4 @@
         margin-top: -3px;
     }
 
-    &__sold {}
 }
