--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -16,6 +16,12 @@ sans-serif;
 $font-display: 'Josefin Sans',
 sans-serif;
 
+// RESPONSIVE DESIGN SCREEN SIZE VAR
+$bp-largest:75em; //1200px screen
+$bp-large:62.5em; //1000px screen
+$bp-md:50em; //800px screen  
+$bp-sm:37.5em; //600px screen
+
 *,
 *::after,
 *::before {
@@ -26,7 +32,13 @@ sans-serif;
 
 html {
     box-sizing: border-box;
-    font-size: 62.5%;
+    font-size: 62.5%; //10px/16px
+
+
+    @media only screen and (max-width:$bp-largest) {
+        font-size: 50%; //8px/16px
+    }
+
 }
 
 body {
@@ -40,4 +52,13 @@ body {
     display: grid;
     grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
     grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem)[col-end])[center-end] minmax(6rem, 1fr) [full-end];
+
+    @media only screen and (max-width:$bp-large) {
+        grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+        grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem)[col-end])[center-end] minmax(6rem, 1fr) [full-end];
+    }
+
+    @media only screen and (max-width:$bp-md) {
+        grid-template-rows: 6rem calc(100vh - 6rem);
+    }
 }
