--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -5,6 +5,11 @@
     // grid-template-columns: repeat(3, 1fr);
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     grid-gap: 6rem;
+
+
+    @media only screen and (max-width:$bp-sm) {
+        margin: 8rem 0;
+    }
 }
 
 .feature {
