--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -3,7 +3,13 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     grid-gap: 10rem;
-    margin: 15rem 6rem
+    margin: 15rem 6rem;
+
+    @media only screen and (max-width:$bp-sm) {
+        margin: 8rem 5rem;
+    }
+
+    ;
 }
 
 .home {
